--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "homepage": "https://farfalina1908.github.io/react-exercises-by-Repeta/",
   "dependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
+    "nanoid": "^4.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.9.0",
